--- a/templates/users/profiles.html
+++ b/templates/users/profiles.html
@@ -42,11 +42,11 @@
                 <div class="col-md-6 mb-3">
                     <label for="cvUpload" class="form-label">Upload CV</label>
                     <input type="file" class="form-control" id="cvUpload" name="cv" accept=".pdf,.doc,.docx">
-                    {% if user.profile.profile_cv %}
+                    <!-- {% if user.profile.profile_cv %} -->
                     <a href="#" target="_blank">View Current CV</a>
 					<!-- <a href="{{ user.profile.profile_cv.url }}" target="_blank">View Current CV</a> -->
 
-					{% endif %}
+					<!-- {% endif %} -->
                 </div>
             </div>
         </div>
