--- a/templates/users/profiles.html
+++ b/templates/users/profiles.html
@@ -5,7 +5,7 @@
     <h2 class="text-center mb-4">Profile</h2>
     <form action="/submit-profile" method="POST" enctype="multipart/form-data">
         <div class="mb-3 text-center">
-            <img src="{{ user.profile.profile_image.url }}" alt="Profile Image" class="profile-img" id="profilePreview">
+            <img src="#" alt="Profile Image" class="profile-img" id="profilePreview">
             <div class="mt-3">
                 <label for="profileImage" class="form-label btn btn-primary btn-sm">Change Profile Image</label>
                 <input type="file" id="profileImage" name="profileImage" class="form-control d-none" accept="image/*" onchange="previewImage(event)">
