--- a/templates/users/profiles.html
+++ b/templates/users/profiles.html
@@ -16,23 +16,23 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="fullName" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="fullName" name="fullName" value="{{ user.profile.name }}" placeholder="Enter your full name" required>
+                    <input type="text" class="form-control" id="fullName" name="fullName" value="#" placeholder="Enter your full name" required>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" value="{{ user.profile.email }}" placeholder="Enter your email" required>
+                    <input type="email" class="form-control" id="email" name="email" value="#" placeholder="Enter your email" required>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" value="{{ user.profile.username }}" placeholder="Enter your username" required>
+                    <input type="text" class="form-control" id="username" name="username" value="#" placeholder="Enter your username" required>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="shortIntro" class="form-label">Short Introduction</label>
-                    <input type="text" class="form-control" id="shortIntro" name="shortIntro" value="{{ user.profile.short_intro }}" placeholder="Tell us something about yourself">
+                    <input type="text" class="form-control" id="shortIntro" name="shortIntro" value="#" placeholder="Tell us something about yourself">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" id="location" name="location" value="{{ user.profile.location }}" placeholder="Enter your location">
+                    <input type="text" class="form-control" id="location" name="location" value="#" placeholder="Enter your location">
                 </div>
             </div>
         </div>
@@ -55,19 +55,19 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="socialLinkedin" class="form-label">LinkedIn</label>
-                    <input type="url" class="form-control" id="socialLinkedin" name="socialLinkedin" value="{{ user.profile.social_linkedin }}" placeholder="Enter your LinkedIn profile URL">
+                    <input type="url" class="form-control" id="socialLinkedin" name="socialLinkedin" value="#" placeholder="Enter your LinkedIn profile URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialTwitter" class="form-label">Twitter</label>
-                    <input type="url" class="form-control" id="socialTwitter" name="socialTwitter" value="{{ user.profile.social_twitter }}" placeholder="Enter your Twitter profile URL">
+                    <input type="url" class="form-control" id="socialTwitter" name="socialTwitter" value="#" placeholder="Enter your Twitter profile URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialYoutube" class="form-label">YouTube</label>
-                    <input type="url" class="form-control" id="socialYoutube" name="socialYoutube" value="{{ user.profile.social_youtube }}" placeholder="Enter your YouTube channel URL">
+                    <input type="url" class="form-control" id="socialYoutube" name="socialYoutube" value="#" placeholder="Enter your YouTube channel URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialWebsite" class="form-label">Website</label>
-                    <input type="url" class="form-control" id="socialWebsite" name="socialWebsite" value="{{ user.profile.social_website }}" placeholder="Enter your website URL">
+                    <input type="url" class="form-control" id="socialWebsite" name="socialWebsite" value="#" placeholder="Enter your website URL">
                 </div>
             </div>
         </div>
