--- a/templates/users/profiles.html
+++ b/templates/users/profiles.html
@@ -5,7 +5,7 @@
     <h2 class="text-center mb-4">Profile</h2>
     <form action="/submit-profile" method="POST" enctype="multipart/form-data">
         <div class="mb-3 text-center">
-            <img src="#" alt="Profile Image" class="profile-img" id="profilePreview">
+            <img src="# alt="Profile Image" class="profile-img" id="profilePreview">
             <div class="mt-3">
                 <label for="profileImage" class="form-label btn btn-primary btn-sm">Change Profile Image</label>
                 <input type="file" id="profileImage" name="profileImage" class="form-control d-none" accept="image/*" onchange="previewImage(event)">
@@ -42,11 +42,9 @@
                 <div class="col-md-6 mb-3">
                     <label for="cvUpload" class="form-label">Upload CV</label>
                     <input type="file" class="form-control" id="cvUpload" name="cv" accept=".pdf,.doc,.docx">
-                    <!-- {% if user.profile.profile_cv %} -->
+                   
                     <a href="#" target="_blank">View Current CV</a>
-					<!-- <a href="{{ user.profile.profile_cv.url }}" target="_blank">View Current CV</a> -->
 
-					<!-- {% endif %} -->
                 </div>
             </div>
         </div>
@@ -55,19 +53,19 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="socialLinkedin" class="form-label">LinkedIn</label>
-                    <input type="url" class="form-control" id="socialLinkedin" name="socialLinkedin" value="#" placeholder="Enter your LinkedIn profile URL">
+                    <input type="url" class="form-control" id="socialLinkedin" name="socialLinkedin" value="" placeholder="Enter your LinkedIn profile URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialTwitter" class="form-label">Twitter</label>
-                    <input type="url" class="form-control" id="socialTwitter" name="socialTwitter" value="#" placeholder="Enter your Twitter profile URL">
+                    <input type="url" class="form-control" id="socialTwitter" name="socialTwitter" value="" placeholder="Enter your Twitter profile URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialYoutube" class="form-label">YouTube</label>
-                    <input type="url" class="form-control" id="socialYoutube" name="socialYoutube" value="#" placeholder="Enter your YouTube channel URL">
+                    <input type="url" class="form-control" id="socialYoutube" name="socialYoutube" value="" placeholder="Enter your YouTube channel URL">
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="socialWebsite" class="form-label">Website</label>
-                    <input type="url" class="form-control" id="socialWebsite" name="socialWebsite" value="#" placeholder="Enter your website URL">
+                    <input type="url" class="form-control" id="socialWebsite" name="socialWebsite" value="" placeholder="Enter your website URL">
                 </div>
             </div>
         </div>
