--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -85,8 +85,9 @@
                                             {% endif %}
                                     
                                     >
-                                    <a href="{% url 'profiles' %}">Candidate </a></li>
-                                    
+                                    <!-- <a href="{% url 'profiles' %}">Candidate </a></li> -->
+                                    <a href="{% url 'account' %}">Candidate </a></li>
+
                                     
                                     <li
                                             {% if 'faq' in request.path %}
