--- a/templates/users/login_register.html
+++ b/templates/users/login_register.html
@@ -19,6 +19,11 @@
             <div class="form__field">
                 <label for="formInput#{{ field.name }}">{{ field.label }}</label>
                 {{ field }}
+
+                {% if field.help_text %}
+                <small>{{ field.help_text }}</small>
+                {% endif %}
+
                 {% for error in field.errors %}
                 <p class="error">{{ error }}</p>
                 {% endfor %}
